[Category Page Layout - Bugfix] Fixes wrapping products column into next line in Safari browsers

--- a/src/pages/layout/2columns-left/mixin.scss
+++ b/src/pages/layout/2columns-left/mixin.scss
@@ -43,6 +43,11 @@ $layout-2col-left_main-padding-desktop: $layout-2col-left_main-top-spacing 0 0
             display: flex;
             flex-wrap: wrap;
             align-items: $layout-2col-left_layout-align-items;
+
+            &:before,
+            &:after {
+                display: none;
+            }
         }
     }
 
